Update files to deploy

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ MYSQL_ROOT_PASSWORD=password
 MYSQL_USER=siroko_user
 MYSQL_PASSWORD=password
 
-REDIS_URL=redis://redis:63785
+REDIS_URL=redis://redis:{$REDIS_PORT}
 ELASTIC_HOST=http://localhost:{$ELASTIC_PORT1}
