--- a/symfony/.env.example
+++ b/symfony/.env.example
@@ -31,8 +31,14 @@ APP_SECRET=
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-DATABASE_URL="mysql://siroko_user:password@mysql:3306/siroko_db?serverVersion=8.0.32&charset=utf8mb4"
-REDIS_URL=redis://redis:63785
-ELASTIC_HOST=http://localhost:9285
-ELASTICSEARCH_HOST=http://elasticsearch:9200
-ELASTICSEARCH_INDEX=app-usecase-%kernel.environment%
+MYSQL_CONTANER=mysql
+MYSQL_PORT=33066
+MYSQL_DATABASE=siroko_db
+MYSQL_ROOT_PASSWORD=password
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_CONTANER}:3306/${MYSQL_DATABASE}?serverVersion=8.0.32&charset=utf8mb4"
+
+REDIS_PORT=63786
+ELASTIC_PORT1=9286
+REDIS_URL=redis://redis:{$REDIS_PORT}
+ELASTIC_HOST=http://localhost:{$ELASTIC_PORT1}
+
