Update files to deploy

--- a/symfony/.env.example
+++ b/symfony/.env.example
@@ -34,7 +34,8 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 MYSQL_CONTANER=mysql
 MYSQL_PORT=33066
 MYSQL_DATABASE=siroko_db
-MYSQL_ROOT_PASSWORD=password
+MYSQL_USER=siroko_user
+MYSQL_PASSWORD=password
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_CONTANER}:3306/${MYSQL_DATABASE}?serverVersion=8.0.32&charset=utf8mb4"
 
 REDIS_PORT=63786
