Update files to deploy

--- a/symfony/.env.example
+++ b/symfony/.env.example
@@ -40,6 +40,6 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_CONTANER}:3306/${M
 
 REDIS_PORT=63786
 ELASTIC_PORT1=9286
-REDIS_URL=redis://redis:{$REDIS_PORT}
-ELASTIC_HOST=http://localhost:{$ELASTIC_PORT1}
+REDIS_URL=redis://redis:$REDIS_PORT
+ELASTIC_HOST=http://localhost:$ELASTIC_PORT1
 
