--- a/symfony/.env.test.example
+++ b/symfony/.env.test.example
@@ -2,4 +2,4 @@ APP_ENV=test
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data_test.db
 
 REDIS_PORT=63785
-REDIS_URL=redis://redis:{$REDIS_PORT}
+REDIS_URL=redis://127.0.0.1:$REDIS_PORT
