--- a/symfony/.env.example
+++ b/symfony/.env.example
@@ -41,5 +41,6 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_CONTANER}:3306/${M
 REDIS_PORT=63786
 ELASTIC_PORT1=9286
 REDIS_URL=redis://redis:$REDIS_PORT
-ELASTIC_HOST=http://localhost:$ELASTIC_PORT1
+ELASTICSEARCH_HOST=http://elasticsearch:9200
+ELASTICSEARCH_EXTERNAL_HOST=http://localhost:$ELASTIC_PORT1
 
