Feature: Added UserBundle and enforce security on bundle endpoints

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ MYSQL_PASSWORD=password
 
 REDIS_URL=redis://redis:{$REDIS_PORT}
 ELASTIC_HOST=http://localhost:{$ELASTIC_PORT1}
+
+XDEBUG_MODE=debug
