--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -23,10 +23,7 @@ RUN pecl install redis && docker-php-ext-enable redis
 
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
-RUN echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && \
-    echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-
-# RUN pecl install pcov && docker-php-ext-enable pcov
+COPY 99-xdebug.ini /usr/local/etc/php/conf.d/99-xdebug.ini
 
 # Instalar Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
