--- a/symfony/.env.test
+++ b/symfony/.env.test
@@ -1,4 +1,5 @@
 APP_ENV=test
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data_test.db
 
-
+REDIS_PORT=63785
+REDIS_URL=redis://127.0.0.1:$REDIS_PORT
