--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -14,6 +14,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.5",
         "elasticsearch/elasticsearch": "^7.17",
+        "gesdinet/jwt-refresh-token-bundle": "^1.5",
+        "google/apiclient": "^2.17",
+        "lexik/jwt-authentication-bundle": "^3.1",
         "monolog/monolog": "^3.9",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6",
@@ -27,6 +30,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
         "symfony/monolog-bundle": "^3.10",
+        "symfony/password-hasher": "7.3.*",
         "symfony/property-access": "7.3.*",
         "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
@@ -50,7 +54,8 @@
         "psr-4": {
             "App\\": "src/",
             "ProductBundle\\": "siroko-bundles/ProductBundle/",
-            "CartBundle\\": "siroko-bundles/CartBundle/"
+            "CartBundle\\": "siroko-bundles/CartBundle/",
+            "UserBundle\\": "siroko-bundles/UserBundle/"
         }
     },
     "autoload-dev": {
@@ -86,7 +91,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "7.3.*",
             "docker": true
         }
