--- a/symfony/config/packages/security.yaml
+++ b/symfony/config/packages/security.yaml
@@ -1,39 +1,53 @@
+# config/packages/security.yaml
+imports:
+    - { resource: '@UserBundle/Resources/config/security_roles.yaml' }
+
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: UserBundle\Infrastructure\Persistence\Mysql\UserDoctrineEntity
+                property: userEmail
+        users_in_memory:
+            memory: null
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
-            provider: users_in_memory
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+        login:
+            pattern: ^/api/users/login
+            stateless: true
+            provider: app_user_provider
+            json_login:
+                check_path: /api/users/login
+                username_path: email
+                password_path: password
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+        api:
+            pattern: ^/api
+            stateless: true
+            provider: app_user_provider
+            jwt: ~
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # Public routes
+        - { path: ^/api/users/register, roles: PUBLIC_ACCESS, methods: [ POST ] }
+        - { path: ^/api/users/login, roles: PUBLIC_ACCESS, methods: [ POST ] }
+        - { path: ^/api/users/token/refresh, roles: PUBLIC_ACCESS, methods: [ POST ] }
+        - { path: ^/api/users/auth/google$, roles: PUBLIC_ACCESS }
+
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
         password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                cost: 4
+                time_cost: 3
+                memory_cost: 10
